# alm-scraper

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
examples/: out.json
rfcs/: 000-template.md  001-local-storage.md  002-sync.md  003-output-formats.md  004-filtering.md  005-stats.md  006-query.md  007-browser-cookies.md  008-web-ui.md  009-keyboard-shortcuts.md  010-kanban-view.md  011-search-by-id.md  012-goto-defect-paste.md
src/alm_scraper/: __init__.py  api.py  browser.py  cli.py  config.py  constants.py  curl_parser.py  db.py  defect.py  display.py  query.py  sql_helpers.py  storage.py  utils.py
src/alm_scraper/ui/: __init__.py  api.py
src/alm_scraper/ui/static/: index.html
src/alm_scraper/ui/static/_app/: version.json
src/alm_scraper/ui/static/_app/immutable/assets/: 0.B9k_ftnw.css  0.BB2i5kep.css  0.BHGp7acF.css  0.C9V0OMDg.css  0.Cq3PI_1F.css  0.WkNEs0UR.css
src/alm_scraper/ui/static/_app/immutable/chunks/: 8dE9xose.js  B1j5rJTE.js  B2RMDzYE.js  B4sykdIX.js  B6rEL-Bb.js  B7noLHo6.js  B9s1PaqY.js  BAmHsSQQ.js  (+63 more)
tests/: test_api.py  test_cli.py  test_curl_parser.py  test_defect.py  test_sql_helpers.py
ui/: package-lock.json  package.json  svelte.config.js  vite.config.ts
ui/src/: app.css
ui/src/lib/: api.ts  types.ts
ui/src/lib/components/: BurndownChart.svelte  KeyboardShortcuts.svelte  NavBar.svelte  PriorityTrendChart.svelte  VelocityChart.svelte
ui/src/routes/: +layout.svelte  +layout.ts  +page.svelte
ui/src/routes/defects/[id]/: +page.svelte
ui/src/routes/kanban/: +page.svelte
ui/src/routes/stats/: +page.svelte
(+49 files in other folders)
